# markdown-feedback

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  prd-criticmark-editor-v2.md  vite.config.singlefile.ts  vite.config.ts  vite.config.vscode.ts
.claude/: settings.json
.claude/commands/: release.md  test.md
docs/: about-panel.md  deletion-span-solutions.md  desktop-app.md  docx-import.md  ios-app.md  local-file-editing.md  markdown-decorations-spike.md  prd.md  project-context.md  vscode-extension.md
extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json
extension/src/: editorProvider.ts  extension.ts  sidecarManager.ts
public/: CNAME
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: AboutPanel.tsx  ChangesPanel.tsx  Editor.tsx  EditorControls.tsx  ExportMenu.tsx  ImportModal.tsx  RecoveryModal.tsx  SelectionToolbar.tsx  SourceView.tsx  Toolbar.tsx
src/extensions/: tableRowParagraph.ts  trackChanges.ts
src/hooks/: useSessionPersistence.ts
src/stores/: documentStore.ts
src/stores/persistence/: index.ts  tauri.ts  types.ts  vscode.ts  web.ts
src/utils/: docxToMarkdown.ts  exportDocument.ts  extractChanges.ts  parseCriticMarkup.ts  parseDocx.ts  serializeCriticMarkup.ts
