[package]
name = "markdown-feedback"
version = "0.1.0"
description = "A track-changes editor for markdown"
authors = ["Geoff Dudgeon"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
